[gd_scene load_steps=42 format=2]

[ext_resource path="res://Penguin.gd" type="Script" id=1]
[ext_resource path="res://temp1.png" type="Texture" id=2]
[ext_resource path="res://ice.png" type="Texture" id=3]
[ext_resource path="res://penguinsprites/pj1.png" type="Texture" id=4]
[ext_resource path="res://MainScene.gd" type="Script" id=5]
[ext_resource path="res://Fade.tscn" type="PackedScene" id=6]
[ext_resource path="res://penguinsprites/pj3.png" type="Texture" id=7]
[ext_resource path="res://penguinsprites/ph2.png" type="Texture" id=8]
[ext_resource path="res://penguinsprites/pb3.png" type="Texture" id=9]
[ext_resource path="res://penguinsprites/pe2.png" type="Texture" id=10]
[ext_resource path="res://penguinsprites/pj2.png" type="Texture" id=11]
[ext_resource path="res://penguinsprites/pb1.png" type="Texture" id=12]
[ext_resource path="res://penguinsprites/pb2.png" type="Texture" id=13]
[ext_resource path="res://penguinsprites/ph3.png" type="Texture" id=14]
[ext_resource path="res://penguinsprites/pe3.png" type="Texture" id=15]
[ext_resource path="res://penguinsprites/pe1.png" type="Texture" id=16]
[ext_resource path="res://penguinsprites/ph1.png" type="Texture" id=17]
[ext_resource path="res://mixkit-footsteps-in-the-forest-ground-1230.wav" type="AudioStream" id=18]
[ext_resource path="res://PenguinMainMusic.mp3" type="AudioStream" id=19]
[ext_resource path="res://sound.png" type="Texture" id=20]
[ext_resource path="res://mute.png" type="Texture" id=21]
[ext_resource path="res://Button.gd" type="Script" id=22]
[ext_resource path="res://PublicPixel-z84yD.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://notif.mp3" type="AudioStream" id=24]
[ext_resource path="res://first_music.mp3" type="AudioStream" id=25]
[ext_resource path="res://texture.webp" type="Texture" id=26]
[ext_resource path="res://icons8-restart-256.png" type="Texture" id=27]
[ext_resource path="res://endgame.png" type="Texture" id=28]
[ext_resource path="res://Fade.gd" type="Script" id=29]
[ext_resource path="res://temp2.png" type="Texture" id=30]
[ext_resource path="res://temp5.png" type="Texture" id=31]
[ext_resource path="res://temp4.png" type="Texture" id=32]
[ext_resource path="res://temp3.png" type="Texture" id=33]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "Idle_Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Idle_Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle_Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Idle_Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 10 ), ExtResource( 15 ) ],
"loop": true,
"name": "walk_down",
"speed": 3.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk_left",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_right",
"speed": 7.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 8 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk_up",
"speed": 3.0
} ]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 23 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.788235, 0.937255, 0.933333, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.113725, 0.117647, 0.0941176, 1 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 23 )

[node name="MainScene" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 5 )

[node name="Water" type="AnimatedSprite" parent="."]
position = Vector2( 515.5, 301 )
scale = Vector2( 2.066, 2.14894 )
frames = SubResource( 8 )
frame = 3
playing = true

[node name="Ice" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Ice"]
position = Vector2( 500, 302 )
scale = Vector2( 0.950962, 0.907132 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ice"]
polygon = PoolVector2Array( 72, 120, 77, 416, 860, 425, 865, 125, 803, 120, 800, 63, 753, 66, 753, -3, 981, 61, 905, 569, 54, 541, 29, 90, 99, 3, 751, -3, 192, 7, 188, 56, 180, 94, 164, 126, 139, 126, 113, 124 )

[node name="Penguin" type="KinematicBody2D" parent="."]
position = Vector2( 508, 265 )
collision_mask = 6
script = ExtResource( 1 )

[node name="PenguinSprite" type="Sprite" parent="Penguin"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="AnimationSprite" type="AnimatedSprite" parent="Penguin"]
frames = SubResource( 1 )
animation = "Idle_Left"

[node name="PenguinCollisionPolygon2D" type="CollisionPolygon2D" parent="Penguin"]
polygon = PoolVector2Array( 32, 9, 32, 4, 32, -10, 24, -22, 12, -31, -2, -32, -13, -28, -24, -18, -29, -7, -32, 3, -30, 17, -27, 24, -21, 29, -15, 33, -7, 32, 9, 32, 15, 33, 27, 29, 33, 25 )

[node name="WalkingSound" type="AudioStreamPlayer2D" parent="Penguin"]
stream = ExtResource( 18 )

[node name="Light2D" type="Light2D" parent="Penguin"]
texture = ExtResource( 26 )

[node name="Notification" parent="." instance=ExtResource( 6 )]
margin_left = 212.0
margin_top = 314.0
margin_right = 757.0
margin_bottom = 420.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="BefriendNotification" parent="." instance=ExtResource( 6 )]
margin_left = 224.0
margin_top = 158.0
margin_right = 747.0
margin_bottom = 316.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="FishContainer" type="Node2D" parent="."]

[node name="FishSpawnPoint1" type="Position2D" parent="FishContainer"]
position = Vector2( 34, 35 )

[node name="FishSpawnPoint2" type="Position2D" parent="FishContainer"]
position = Vector2( 989, 498 )

[node name="FishSpawnPoint3" type="Position2D" parent="FishContainer"]
position = Vector2( 714, 16 )

[node name="FishSpawnPoint4" type="Position2D" parent="FishContainer"]
position = Vector2( 256, 456 )

[node name="FishSpawnPoint5" type="Position2D" parent="FishContainer"]
position = Vector2( 140, 263 )

[node name="FishSpawnPoint6" type="Position2D" parent="FishContainer"]
position = Vector2( 487, 476 )

[node name="FishSpawnPoint7" type="Position2D" parent="FishContainer"]
position = Vector2( 452, 35 )

[node name="FishSpawnPoint8" type="Position2D" parent="FishContainer"]
position = Vector2( 58, 140 )

[node name="FishSpawnPoint9" type="Position2D" parent="FishContainer"]
position = Vector2( 848, 420 )

[node name="FishSpawnPoint10" type="Position2D" parent="FishContainer"]
position = Vector2( 116, 394 )

[node name="FishSpawnPoint11" type="Position2D" parent="FishContainer"]
position = Vector2( 53, 551 )

[node name="FishSpawnPoint12" type="Position2D" parent="FishContainer"]
position = Vector2( 807, 162 )

[node name="FishSpawnPoint13" type="Position2D" parent="FishContainer"]
position = Vector2( 906, 264 )

[node name="FishSpawnPoint14" type="Position2D" parent="FishContainer"]
position = Vector2( 335, 567 )

[node name="GreenFishContainer" type="Node2D" parent="."]

[node name="GreenFishSpawnPoint1" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 830, 276 )

[node name="GreenFishSpawnPoint2" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 709, 59 )

[node name="GreenFishSpawnPoint3" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 261, 45 )

[node name="GreenFishSpawnPoint4" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 101, 322 )

[node name="GreenFishSpawnPoint5" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 87, 141 )

[node name="GreenFishSpawnPoint6" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 850, 365 )

[node name="GreenFishSpawnPoint7" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 244, 404 )

[node name="GreenFishSpawnPoint8" type="Position2D" parent="GreenFishContainer"]
position = Vector2( 196, 85 )

[node name="FishEatenCounter" type="Label" parent="."]
margin_left = 907.0
margin_top = 3.0
margin_right = 1022.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="WhaleSpawnPoint" type="Position2D" parent="."]
position = Vector2( 42, 454 )

[node name="WhaleContainer" type="Node2D" parent="."]
position = Vector2( 624, 509 )

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = 1.0

[node name="Button" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 3.0
margin_right = 116.0
margin_bottom = 99.0
rect_scale = Vector2( 0.451661, 0.459207 )
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 21 )
script = ExtResource( 22 )

[node name="WhaleProgressBar" type="ProgressBar" parent="."]
margin_left = 299.0
margin_top = 18.0
margin_right = 677.0
margin_bottom = 37.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 7.0
percent_visible = false

[node name="NotificationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="NotificationMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="MusicTween" type="Tween" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="VibeTween" type="Tween" parent="."]

[node name="EndgameSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 301 )
scale = Vector2( 0.489, 0.489 )
texture = ExtResource( 28 )

[node name="RestartButton" type="TextureButton" parent="."]
visible = false
margin_left = 380.0
margin_top = 139.0
margin_right = 659.0
margin_bottom = 395.0
texture_normal = ExtResource( 27 )

[node name="EndsceneNotification" type="RichTextLabel" parent="."]
margin_left = 86.0
margin_top = 493.0
margin_right = 942.0
margin_bottom = 591.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
script = ExtResource( 29 )

[node name="Tween" type="Tween" parent="EndsceneNotification"]

[node name="GreenFishSpawnTimer" type="Timer" parent="."]
wait_time = 6.5

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
